--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,27 +9,16 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Login to Docker Hub
+      - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ vars.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      # -
-      #   name: Set up Docker Buildx
-      #   uses: docker/setup-buildx-action@v3
       - name: Install Docker Compose
         run: |
           sudo apt-get update
           sudo apt-get install -y docker-compose
       - name: Build and push with Docker Compose
         run: |
-          docker-compose -f path/to/your/docker-compose.yml build
-          docker-compose -f path/to/your/docker-compose.yml push
-      # -
-      #   name: Build and push
-      #   uses: docker/build-push-action@v6
-      #   with:
-      #     platforms: linux/amd64,linux/arm64
-      #     push: true
-      #     tags: ${{ vars.DOCKER_USERNAME }}/${{ github.event.repository.name }}:latest
+          docker-compose -f docker-compose.yml build
+          docker-compose -f docker-compose.yml push
