--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,11 +23,6 @@ jobs:
       - name: Build with Docker Compose
         run: |
           docker-compose -f docker-compose.yml build
-      - name: Tag Docker Images
-        run: |
-          docker tag ${{ vars.DOCKER_USERNAME }}/${{ github.event.repository.name }}_backend:latest ${{ vars.DOCKER_USERNAME }}/${{ github.event.repository.name }}:latest
-          docker tag ${{ vars.DOCKER_USERNAME }}/${{ github.event.repository.name }}_frontend:latest ${{ vars.DOCKER_USERNAME }}/${{ github.event.repository.name }}:latest
-          docker tag ${{ vars.DOCKER_USERNAME }}/${{ github.event.repository.name }}_database:latest ${{ vars.DOCKER_USERNAME }}/${{ github.event.repository.name }}:latest
       - name: Push to DockerHub repository
         run: |
-          docker push ${{ vars.DOCKER_USERNAME }}/${{ github.event.repository.name }}:latest
+          docker push ${{ vars.DOCKER_USERNAME }}/${{ github.event.repository.name }}
