--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,9 +25,9 @@ jobs:
           docker-compose -f docker-compose.yml build
       - name: Tag Docker Images
         run: |
-          docker tag ${{ vars.DOCKER_USERNAME }}/${{ github.event.repository.name }}-backend:latest ${{ vars.DOCKER_USERNAME }}/${{ github.event.repository.name }}:latest
-          docker tag ${{ vars.DOCKER_USERNAME }}/${{ github.event.repository.name }}-frontend:latest ${{ vars.DOCKER_USERNAME }}/${{ github.event.repository.name }}:latest
-          docker tag ${{ vars.DOCKER_USERNAME }}/${{ github.event.repository.name }}-database:latest ${{ vars.DOCKER_USERNAME }}/${{ github.event.repository.name }}:latest
+          docker.io/library/${{ github.event.repository.name }}_backend:latest ${{ vars.DOCKER_USERNAME }}/${{ github.event.repository.name }}:latest
+          docker.io/library/${{ github.event.repository.name }}_frontend:latest ${{ vars.DOCKER_USERNAME }}/${{ github.event.repository.name }}:latest
+          docker.io/library/${{ github.event.repository.name }}_database:latest ${{ vars.DOCKER_USERNAME }}/${{ github.event.repository.name }}:latest
       - name: Push to DockerHub repository
         run: |
           docker push ${{ vars.DOCKER_USERNAME }}/${{ github.event.repository.name }}:latest
