--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,9 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y docker-compose
-      - name: Build and push with Docker Compose
+      - name: Build with Docker Compose
         run: |
           docker-compose -f docker-compose.yml build
+      - name: Push to Docker Hub
+        run: |
           docker-compose -f docker-compose.yml push
