--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,18 +11,10 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
+      - name: Build and push to Docker Hub
+        uses: mr-smithers-excellent/docker-build-push@v6
         with:
+          image: docker-hub-repo/image-name
+          registry: docker.io
           username: ${{ vars.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Install Docker Compose
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y docker-compose
-      - name: Build with Docker Compose
-        run: |
-          docker-compose -f docker-compose.yml build
-      - name: Push to Docker Hub
-        run: |
-          docker-compose -f docker-compose.yml push
+          password: ${{ secrets.DOCKER_TOKEN }}
