--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,18 +26,18 @@ jobs:
         with:
           context: ./frontend
           push: true
-          tags: ${{ vars.DOCKER_USERNAME }}/${{ github.event.repository.name }}/frontend:latest
+          tags: ${{ vars.DOCKER_USERNAME }}/${{ github.event.repository.name }}:frontend
           
       - name: Build and push backend image
         uses: docker/build-push-action@v5
         with:
           context: ./backend
           push: true
-          tags: ${{ vars.DOCKER_USERNAME }}/${{ github.event.repository.name }}/backend:latest
+          tags: ${{ vars.DOCKER_USERNAME }}/${{ github.event.repository.name }}:backend
           
       - name: Build and push database image
         uses: docker/build-push-action@v5
         with:
           context: ./database
           push: true
-          tags: ${{ vars.DOCKER_USERNAME }}/${{ github.event.repository.name }}/database:latest
+          tags: ${{ vars.DOCKER_USERNAME }}/${{ github.event.repository.name }}:database
