--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
       - "5000:5000"
     environment:
       - DATABASE_PATH=/data/database.db
+      - HOST_NAME=localhost
     depends_on:
       - database
   
