--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,15 +45,14 @@ jobs:
   restart-droplet:
     runs-on: ubuntu-latest
     steps:
-      - name: Install doctl
-        uses: digitalocean/action-doctl@v2
-        with:
-          token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
-      - name: Go to app dir
-        run: doctl cd /home/app
-      - name: Shutdown app
-        run: doctl docker compose down
-      - name: Pull containers from DockerHub
-        run: doctl docker compose pull
-      - name: Restart app
-        run: doctl docker compose up -d
+      - name: Install sshpass
+        run: sudo apt-get update && sudo apt-get install -y sshpass
+      
+      - name: Restart app on droplet
+        run: |
+          sshpass -p "${{ secrets.DIGITALOCEAN_SSH_PASSWORD }}" ssh -o StrictHostKeyChecking=no oscar@170.64.162.244 "
+          cd /home/app &&
+          docker compose down &&
+          docker compose pull &&
+          docker compose up -d
+          "
