--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,14 +42,14 @@ jobs:
           push: true
           tags: ${{ vars.DOCKER_USERNAME }}/${{ github.event.repository.name }}:database
           
-      - name: Install sshpass for droplet
-        run: sudo apt-get update && sudo apt-get install -y sshpass
+      # - name: Install sshpass for droplet
+      #   run: sudo apt-get update && sudo apt-get install -y sshpass
       
-      - name: Restart app on droplet
-        run: |
-          sshpass -p "${{ secrets.DIGITALOCEAN_SSH_PASSWORD }}" ssh -o StrictHostKeyChecking=no oscar@170.64.162.244 "
-          cd /home/app &&
-          docker compose down &&
-          docker compose pull &&
-          docker compose up -d
-          "
+      # - name: Restart app on droplet
+      #   run: |
+      #     sshpass -p "${{ secrets.DIGITALOCEAN_SSH_PASSWORD }}" ssh -o StrictHostKeyChecking=no oscar@170.64.162.244 "
+      #     cd /home/app &&
+      #     docker compose down &&
+      #     docker compose pull &&
+      #     docker compose up -d
+      #     "
