--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,4 +35,21 @@ jobs:
           push: true
           tags: ${{ vars.DOCKER_USERNAME }}/${{ github.event.repository.name }}:backend
           
-      - nam
+      - name: Build and push database image
+        uses: docker/build-push-action@v5
+        with:
+          context: ./database
+          push: true
+          tags: ${{ vars.DOCKER_USERNAME }}/${{ github.event.repository.name }}:database
+
+      - name: Install sshpass for droplet
+        run: sudo apt-get update && sudo apt-get install -y sshpass
+
+      - name: Update and restart app in droplet
+        run: |
+          sshpass -p "${{ secrets.DIGITALOCEAN_SSH_PASSWORD }}" ssh -o StrictHostKeyChecking=no oscar@170.64.162.244 "
+          cd /home/app &&
+          docker compose down &&
+          docker compose pull &&
+          docker compose up -d
+          "
