--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,19 +42,12 @@ jobs:
           push: true
           tags: ${{ vars.DOCKER_USERNAME }}/${{ github.event.repository.name }}:database
 
-      - name: Install SSH Client
-        run: sudo apt-get update && sudo apt-get install -y openssh-client
-
-      - name: Set up SSH key
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.DROPLET_SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan -H 170.64.162.244 >> ~/.ssh/known_hosts
+      - name: Install sshpass
+        run: sudo apt-get update && sudo apt-get install -y sshpass
 
       - name: Deploy app to droplet
         run: |
-          ssh -o StrictHostKeyChecking=no user@170.64.162.244 "
+          sshpass -p "${{ secrets.DROPLET_USER_PASSWORD }}" ssh -o StrictHostKeyChecking=no user@170.64.162.244 "
           cd /home/app &&
           docker compose down &&
           docker compose pull &&
