--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,5 +51,6 @@ jobs:
           cd /home/app &&
           docker compose down &&
           docker compose pull &&
-          docker compose up -d
+          docker compose up -d &&
+          docker images --filter reference=21omccartney/3.8-complex-processes -q | xargs docker rmi -f
           "
