--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,7 @@ jobs:
           sshpass -p "${{ secrets.DROPLET_USER_PASSWORD }}" ssh -o StrictHostKeyChecking=no user@170.64.162.244 "
           cd /home/app &&
           docker compose down &&
+          docker images --filter reference=21omccartney/3.8-complex-processes -q | xargs docker rmi -f &&
           docker compose pull &&
-          docker compose up -d &&
-          docker images --filter reference=21omccartney/3.8-complex-processes -q | xargs docker rmi -f
+          docker compose up -d
           "
